--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "express": "~4.16.1",
     "express-handlebars": "^5.2.0",
     "express-session": "^1.17.1",
+    "formidable": "^1.2.2",
     "handlebars": "^4.7.6",
     "joi": "^17.4.0",
     "mongoose": "^5.11.19"
